# rust-fstream

./: Cargo.toml  README.md  lib.rs
src/: lib.rs
