[package]
name = "fstream"
version = "0.1.0"
authors = ["DimChtz"]
description = "A simple library to read/write files faster in Rust."
keywords = ["rust", "rust-library", "filesystem", "file", "stream", "filestream", "library", "lib", "read", "write", "fstream", "fstream-rust", "rust-fstream"]
license = "MIT"
repository = "https://github.com/DimChtz/rust-fstream"
readme = "README.md"

[dependencies]
